# GarmentStyleMatch

./: .clang-tidy  .clazy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CppCoreGuideline.md  GarmentStyleMatch.icns  README.md  TODO.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
resources/category-rules/: TeenieWeenie.lua  current-brand.lua
scripts/: download-models.ps1  setup-onnxruntime.ps1
src/: CMakeLists.txt  GarmentStyleMatch.rc  main.cpp
src/core/: CandidateListModel.cpp  CandidateListModel.h  GalleryListModel.cpp  GalleryListModel.h  GarmentMatcher.cpp  GarmentMatcher.h  HttpDownloader.cpp  HttpDownloader.h  ImageMetadata.cpp  ImageMetadata.h  LuaCategoryRuleEngine.cpp  LuaCategoryRuleEngine.h  MatchController.cpp  MatchController.h  MatchResultStore.cpp  MatchResultStore.h  PhotoListModel.cpp  PhotoListModel.h  PptPageListModel.cpp  PptPageListModel.h  PptStyleExtractor.cpp  PptStyleExtractor.h  SQLiteDB.cpp  SQLiteDB.h  SQLiteStatement.cpp  SQLiteStatement.h  WindowsMlExecutionProvider.cpp  WindowsMlExecutionProvider.h
src/platform/: SplashScreen.h  SplashScreenMac.mm  SplashScreenStub.cpp  SplashScreenWin.cpp
src/qml/: Main.qml  Theme.qml
src/qml/components/: CandidatePanel.qml  ClearableTextField.qml  ConfirmBar.qml  GalleryPanel.qml  HeaderBar.qml  IconButton.qml  ImagePropertiesPanel.qml  MainImageView.qml  MatchPanel.qml  OutputImagePreview.qml  PathPickerRow.qml  PptPreviewPanel.qml  StyleGalleryPanel.qml
tests/: CMakeLists.txt  GalleryListModelTest.cpp  GarmentMatcherRuntimeTest.cpp  HttpDownloaderTest.cpp  ImageMetadataTest.cpp  LuaCategoryRuleEngineTest.cpp  MatchControllerTest.cpp  MatchResultStoreTest.cpp  PptPageListModelTest.cpp  PptStyleExtractorTest.cpp  StyleGalleryPanelTest.cpp
tests/qml/: tst_StyleGalleryPanel.qml
